[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/Enemies/DodgeEnemies/Turret/Turret.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/DodgeEnemies/Turret/TurretBarrel.png" type="Texture" id=2]
[ext_resource path="res://Managing/Colliders/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Enemies/DodgeEnemies/Turret/Turret.gd" type="Script" id=4]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=5]
[ext_resource path="res://Entities/Enemies/Shoot.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[sub_resource type="CircleShape2D" id=2]

[node name="Turret" type="KinematicBody2D"]
rotation = -0.00153355
collision_layer = 0
script = ExtResource( 4 )

[node name="TurretBarrel" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 7, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collisions" type="Node2D" parent="."]

[node name="PlayerDetection" parent="Collisions" instance=ExtResource( 3 )]
visible = false
mustBeInSight = false

[node name="CollisionShape2D" parent="Collisions/PlayerDetection" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ShootSFX" type="Node2D" parent="."]
position = Vector2( 0, -12 )
script = ExtResource( 5 )
audio = ExtResource( 6 )
volumeMod = -5.0
pitchShiftRange = 4.0
bus = "ReverbLow"

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="CooldownTimer" to="." method="shoot"]

[editable path="Collisions/PlayerDetection"]
